# terry-2

./: .gitignore  Cargo.toml  analysis.ipynb  initial_frame.json  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yml  post-create.sh  post-start.sh
arc3-agi/: requirements.txt
arc3-agi/arc3_agi/: __init__.py  cli.py
arc3_agi/: __main__.py  automaton.py  checkpoint.py  cli.py  environment.py  experiment.py  fingerprint.py  genetic_code.py  maze.py  maze_old.py  maze_runner.py  parethesis.py  population.py  runner.py  script.py  terry.py  terry2.py
arc3_agi/environment_files/ls20/9607627b/: metadata.json
arc3_agi/tests/: test_api.py  test_checkpoint.py  test_experiment.py  test_fingerprint.py  test_genetic_code.py  test_genetic_code_graph.py  test_genetic_code_scc.py  test_maze.py  test_parenthesis.py  test_reproducibility.py  test_runner.py
docs/: delta_design.md  endpoint.md  evolved_mate_preference_trait.md  genetic_code_graph_oscillation.md  postgres_setup.md  quantization_design.md
environment_files/ls20/9607627b/: metadata.json
src/: automaton.rs  checkpoint.rs  experiment.rs  genetic_code.rs  main.rs  maze.rs  population.rs  runner.rs
