[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arc3-agi"
version = "0.1.0"
description = "Placeholder framework package for arc3-agi"
requires-python = ">=3.10"
authors = [{ name = "arc3-agi" }]
dependencies = [
    "arc-agi",
    "fastapi",
    "uvicorn",
    "tomli-w",
    "tomli ; python_version < '3.11'",
    "duckdb>=1.0",
    "plotly>=5.0",
    "pandas>=2.0",
    "nbformat>=5.0",
]

[project.scripts]
arc3-agi = "arc3_agi.cli:main"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["arc3_agi*"]

[tool.pytest.ini_options]
testpaths = ["arc3_agi/tests"]
